--- a/index.html
+++ b/index.html
@@ -403,6 +403,8 @@ Error message and password prompt
 
 <li>אפייה</li>
 
+<li>אקולייזר בבית החזה</li>
+
 <li>ארוחות</li>
 
 <li>ארוחת כריסמס</li>
@@ -1220,6 +1222,8 @@ Error message and password prompt
 <li>עמליה</li>
 
 <li>עץ המשפחה של אווה</li>
+
+<li>עצים</li>
 
 <li>פ.מ.אלכסנדר</li>
 
@@ -9258,10 +9262,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20200601071032468" title="$:/state/tab/moresidebar-401116514">
-<pre>$:/core/ui/MoreSideBar/Missing</pre>
+<div created="20161023184709475" modified="20200910133533342" title="$:/state/tab/moresidebar-401116514">
+<pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
-<div created="20161023184705203" modified="20200815093419859" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200910135945726" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9270,7 +9274,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[מכוניות כאן]] [[צ'ים צ'ימני]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="עצים [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9290,7 +9294,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200816164451996" title="$:/temp/search">
+<div created="20161023184814872" modified="20200910140003471" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9692,7 +9696,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Papa Yoel]]&gt;&gt;</pre>
 </div>
-<div created="20171205174328432" modified="20200426133200146" tags="[[הנחלה בה גדלתי]] משפחות" title="אבינו">
+<div created="20171205174328432" modified="20200910133653248" tags="[[הנחלה בה גדלתי]] משפחות עצים" title="אבינו">
 <pre>[img[pictures/avinu.jpg]]
 
 את אבי האחד פגשתי שוב, אחרי שנים רבות שלא נפגשנו. התמונה הזו צולמה [[בנחלה|הנחלה בה גדלתי]] לפני עשרים שנה בערך.
@@ -10706,7 +10710,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20200823174613238" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
+<div created="20171216194951924" modified="20200910130946436" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -10719,6 +10723,18 @@ Sunny one so true, I love you.//
 
 
 &lt;&lt;englink [[Baking]]&gt;&gt;
+</pre>
+</div>
+<div created="20200828085456030" modified="20200910140938959" tags="[[טיפולים מהספה]] [[הלכות קורונה]]" title="אקולייזר בבית החזה">
+<pre>[img[pictures/equalizer.jpg]]
+
+!!![[רוז'ה]]:
+
+רעיון האקולייזר בבית החזה התחיל עם רעיון [[הכרבולת של יויו|כרבולת בבית החזה]], שאמר שהוא שם לב שבכל פעם שהאגו שלו מתחיל להתנפח הוא מרגיש כאילו כרבולת של תרנגול מתנפחת לו בבית החזה והתחלתי לשים לב לזה וזה היה ממש נכון. אחר כך, בתקופה שכל הזמן מדדתי לעצמי דופק, הרגשתי איך שכשאני נלחץ זה כאילו שהלב גואה אבל לא רק, אלא מעין מערבולת מתחוללת מאחוריו ומעליו. שמתי לב שקו המשווה של זה נמצא שתי אצבעות מעל החלק התחתון של עצם החזה. כשדברים כאלה קורים, אני מפנה את תשומת לבי למקום הזה, נושם לאט אל  מתחת לקו, שואף ונושף בשקט, עד שהמתח יורד, או הכרבולת, או הדופק או כולם.
+
+
+&lt;&lt;englink [[Equalizer in the chest]]&gt;&gt;
+
 </pre>
 </div>
 <div created="20180128153940319" modified="20200502113808726" tags="[[חיות אוכל]] מטבחים [[כמה שירים כבר אפשר להמציא בכלל]] [[הלכות קורונה]] לחם" title="ארוחות">
@@ -10735,7 +10751,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Meals]]&gt;&gt;</pre>
 </div>
-<div created="20161112191527440" modified="20200426133615604" tags="[[חיות אוכל]] ארוחות סגירים [[האנקי דורי]] משפחות" title="ארוחת כריסמס">
+<div created="20161112191527440" modified="20200910133803627" tags="[[חיות אוכל]] ארוחות סגירים [[האנקי דורי]] משפחות עצים" title="ארוחת כריסמס">
 <pre>[img[pictures/aruchat-christmas.jpg]]
 
 
@@ -10898,7 +10914,7 @@ Sunny one so true, I love you.//
 
 </pre>
 </div>
-<div created="20181026164230759" modified="20200320092550275" tags="[[כאן בגטו]] [[מטא בדיון]] [[בדרך לאן שהוא]] סגירים" title="בדרך לשרונה">
+<div created="20181026164230759" modified="20200910133824886" tags="[[כאן בגטו]] [[מטא בדיון]] [[בדרך לאן שהוא]] סגירים עצים" title="בדרך לשרונה">
 <pre>[img[pictures/baderech-lesarona.jpg]]
 
 !!![[תומר]]:
@@ -11093,7 +11109,7 @@ Is where I want to be
 
 &lt;&lt;englink [[Bishvil Haprachim]]&gt;&gt;</pre>
 </div>
-<div created="20190308172649378" modified="20200223171512751" tags="[[כאן בגטו]] ילדים [[מטא בדיון]] [[סיפורים אמיתיים]] [[בדרך לאן שהוא]]" title="בשדרה בדרך הביתה">
+<div created="20190308172649378" modified="20200910133853487" tags="[[כאן בגטו]] ילדים [[מטא בדיון]] [[סיפורים אמיתיים]] [[בדרך לאן שהוא]] עצים" title="בשדרה בדרך הביתה">
 <pre>[img[pictures/basdera.jpg]]
 
 !!![[תומר]]:
@@ -11956,7 +11972,7 @@ Is where I want to be
 
 &lt;&lt;englink [[Gigi]]&gt;&gt;</pre>
 </div>
-<div created="20180718190454440" modified="20200217145040636" tags="[[כאן בגטו]] [[בדרך לאן שהוא]]" title="גינת קריית ספר">
+<div created="20180718190454440" modified="20200910134001790" tags="[[כאן בגטו]] [[בדרך לאן שהוא]] עצים" title="גינת קריית ספר">
 <pre>[img[pictures/ginat-kiryat-sefer.jpg]]
 
 !!![[תומר]]:
@@ -12733,7 +12749,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 &lt;&lt;englink [[Wishing star extension]]&gt;&gt;
 </pre>
 </div>
-<div created="20170806204712419" modified="20200308102954764" tags="[[סיפורים אמיתיים]] [[בדרך לאן שהוא]]" title="הולכת על חבל">
+<div created="20170806204712419" modified="20200910095201285" tags="[[סיפורים אמיתיים]] [[בדרך לאן שהוא]]" title="הולכת על חבל">
 <pre>[img[pictures/holechet-al-chevel.jpg]]
 
 !!![[אנג'ליק]]:
@@ -12746,7 +12762,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 
 
-&lt;&lt;englink [[High wire artist]]&gt;&gt;</pre>
+&lt;&lt;englink [[Tightrope walker]]&gt;&gt;</pre>
 </div>
 <div created="20170807163816985" modified="20200215193639976" tags="[[אירי טוענת]] מוזיקה [[כמה שירים כבר אפשר להמציא בכלל]]" title="הורה">
 <pre>[img[pictures/hora.jpg]]
@@ -12886,7 +12902,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 &lt;&lt;englink [[The blue is already here]]&gt;&gt;
 </pre>
 </div>
-<div created="20161217212236965" modified="20200330162559602" tags="[[אירי וגורה]] [[קופים ממונעים]] [[אירי טוענת]] סגירים [[הלכות קורונה]]" title="הכפר הגלובלי">
+<div created="20161217212236965" modified="20200910134103260" tags="[[אירי וגורה]] [[קופים ממונעים]] [[אירי טוענת]] סגירים [[הלכות קורונה]] עצים" title="הכפר הגלובלי">
 <pre>[img[pictures/hacfar-haglobaly.jpg]]
 
 !!![[אירי]] [[וגורה|גורה]]:
@@ -13010,7 +13026,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 &lt;&lt;englink [[The Masseur]]&gt;&gt;</pre>
 </div>
-<div created="20161113192814802" modified="20200726141428459" tags="בתים [[נאמני הגנזך]] [[מטא בדיון]] סגירים [[החיים נועדו למי שלא יכול להתמודד עם סמים]]" title="המעבדה">
+<div created="20161113192814802" modified="20200910134121959" tags="בתים [[נאמני הגנזך]] [[מטא בדיון]] סגירים [[החיים נועדו למי שלא יכול להתמודד עם סמים]] עצים" title="המעבדה">
 <pre>[img[pictures/hamaabada.jpg]]
 
 ''כאן היינו (2002)''
@@ -13103,7 +13119,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20170201205235325" modified="20200428094936257" tags="בתים משפחות" title="הנחלה בה גדלתי">
+<div created="20170201205235325" modified="20200910134138331" tags="בתים משפחות עצים" title="הנחלה בה גדלתי">
 <pre>[img[pictures/sof-hanachala.jpg]]
 
 !!![[אווה]]:
@@ -13124,7 +13140,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20170704162831150" modified="20200430200706336" tags="[[סיפורים אמיתיים]]" title="הסדנה של קואנג">
+<div created="20170704162831150" modified="20200910134202398" tags="[[סיפורים אמיתיים]] עצים" title="הסדנה של קואנג">
 <pre>[img[pictures/hasadna-shel-queng.jpg]]
 
 !!![[יויו]]:
@@ -13703,7 +13719,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 &lt;&lt;englink [[Dreams that we've dreamt]]&gt;&gt;
 </pre>
 </div>
-<div created="20190309100625286" modified="20200503153257669" tags="[[כאן בגטו]] סרטים [[סיפורים אמיתיים]] חלונות" title="חלון אחורי">
+<div created="20190309100625286" modified="20200910134346886" tags="[[כאן בגטו]] סרטים [[סיפורים אמיתיים]] חלונות עצים" title="חלון אחורי">
 <pre>[img[pictures/rear-window.jpg]]
 
 !!![[תומר]]:
@@ -13714,7 +13730,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Rear Window ]]&gt;&gt;</pre>
 </div>
-<div created="20200503152507603" modified="20200503171022661" tags="[[כאן בגטו]] [[הלכות קורונה]] בתים" title="חלונות">
+<div created="20200503152507603" modified="20200910134401697" tags="[[כאן בגטו]] [[הלכות קורונה]] בתים עצים" title="חלונות">
 <pre>[img[pictures/windows.jpg]]
 
 !!![[תומר]]:
@@ -13816,7 +13832,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Cd store]]&gt;&gt;</pre>
 </div>
-<div created="20170711174005898" modified="20200426134244858" tags="סדרות [[אחיות חוץ]] טלוויזיה [[האנקי דורי]] משפחות" title="חשיפה לצפון">
+<div created="20170711174005898" modified="20200910134428637" tags="סדרות [[אחיות חוץ]] טלוויזיה [[האנקי דורי]] משפחות עצים" title="חשיפה לצפון">
 <pre>[img[pictures/northern-exposure.jpg]]
 
 !!![[יויו]]:
@@ -14997,7 +15013,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Wishing star 29]]&gt;&gt;</pre>
 </div>
-<div created="20161113182253178" modified="20200501140822629" tags="[[הנחלה בה גדלתי]] [[מטא בדיון]] [[הכפר הגלובלי]] סגירים משפחות [[החיים נועדו למי שלא יכול להתמודד עם סמים]]" title="כוכב המשאלות בעל תשע הצלעות">
+<div created="20161113182253178" modified="20200910134514019" tags="[[הנחלה בה גדלתי]] [[מטא בדיון]] [[הכפר הגלובלי]] סגירים משפחות [[החיים נועדו למי שלא יכול להתמודד עם סמים]] עצים" title="כוכב המשאלות בעל תשע הצלעות">
 <pre>!!![[אווה]]:
 
 זה סיפור שכתבתי בחורף 2016, והוא מתחיל בביקור אצל יויו וגורה בפריז, לארוחת כריסמס 2015
@@ -15025,7 +15041,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Kuli Alma]]&gt;&gt;</pre>
 </div>
-<div created="20170425180523126" modified="20200215094600809" tags="[[בחוות החיות]]" title="כורתים עצים">
+<div created="20170425180523126" modified="20200910134529402" tags="[[בחוות החיות]] עצים" title="כורתים עצים">
 <pre>[img[pictures/kortim-ezim.jpg]]
 
 !!![[גורה]]:
@@ -16293,7 +16309,7 @@ We rise to play a greater part.
 
 </pre>
 </div>
-<div created="20200503185808988" modified="20200522151622393" tags="[[כאן בגטו]] [[הלכות קורונה]] חלונות בתים" title="מהחלון של הרטריט">
+<div created="20200503185808988" modified="20200910134657952" tags="[[כאן בגטו]] [[הלכות קורונה]] חלונות בתים עצים" title="מהחלון של הרטריט">
 <pre>[img[pictures/retreatswindow.jpg]]
 
 
@@ -16570,8 +16586,7 @@ We rise to play a greater part.
 </pre>
 </div>
 <div created="20200823173415382" modified="20200823175053741" tags="[[כאן בגטו]] [[סיפורים אמיתיים]]" title="מכוניות כאן">
-<pre>
-[img[pictures/carshere.jpg]]
+<pre>[img[pictures/carshere.jpg]]
 
 
 
@@ -16721,7 +16736,7 @@ We rise to play a greater part.
 
 &lt;&lt;englink [[The newspaper desk]]&gt;&gt;</pre>
 </div>
-<div created="20181026164355462" modified="20200219131813762" tags="[[כאן בגטו]] [[מטא בדיון]]" title="מערכת תל אביב">
+<div created="20181026164355462" modified="20200910134748326" tags="[[כאן בגטו]] [[מטא בדיון]] עצים" title="מערכת תל אביב">
 <pre>[img[pictures/maarechet-tel-aviv.jpg]]
 
 !!![[תומר]]:
@@ -16982,7 +16997,7 @@ We rise to play a greater part.
 
 </pre>
 </div>
-<div created="20170608171939614" modified="20200426134848185" tags="[[נאמני הגנזך]] [[סיפורים אמיתיים]] בתים משפחות" title="משפחת באומן">
+<div created="20170608171939614" modified="20200910135034186" tags="[[נאמני הגנזך]] [[סיפורים אמיתיים]] בתים משפחות tree עצים" title="משפחת באומן">
 <pre>[img[pictures/baumans.jpg]]
 
 !!![[יויו]]:
@@ -16993,7 +17008,7 @@ We rise to play a greater part.
 
 &lt;&lt;englink [[The Baumans]]&gt;&gt;</pre>
 </div>
-<div created="20170704162525777" modified="20200226092119633" tags="בתים" title="משפצים ובונים רהיטים">
+<div created="20170704162525777" modified="20200910135103851" tags="בתים עצים" title="משפצים ובונים רהיטים">
 <pre>[img[pictures/meshapzim-rahitim.jpg]] 
 
 !!![[יויו]]:
@@ -17063,7 +17078,7 @@ We rise to play a greater part.
 
 </pre>
 </div>
-<div created="20200429135615053" modified="20200429151216291" tags="[[כאן בגטו]] [[הלכות קורונה]] [[סיפורים אמיתיים]] [[בדרך לאן שהוא]]" title="מתפללים בגינת בילו">
+<div created="20200429135615053" modified="20200910135121934" tags="[[כאן בגטו]] [[הלכות קורונה]] [[סיפורים אמיתיים]] [[בדרך לאן שהוא]] עצים" title="מתפללים בגינת בילו">
 <pre>[img[pictures/bilugarden.jpg]]
 
 
@@ -18054,7 +18069,7 @@ __אופן ההכנה:__
 
 &lt;&lt;englink [[Poppy seed chocolate cake]]&gt;&gt;</pre>
 </div>
-<div created="20170802173415690" modified="20200813154023223" tags="[[כשהם ישנים]] אפייה" title="עוגת שזיפים">
+<div created="20170802173415690" modified="20200910093010269" tags="[[כשהם ישנים]] אפייה מתכונים" title="עוגת שזיפים">
 <pre>[img[pictures/ugat-shezifim.jpg]]
 
 
@@ -18089,7 +18104,8 @@ __אופן ההכנה:__
 
 7. אופים 25-40 דקות - עד שהעוגות מזהיבות.
 
-</pre>
+
+&lt;&lt;englink [[Plum cake]]&gt;&gt;</pre>
 </div>
 <div created="20170319172108447" modified="20200716203605137" tags="HH" title="עורכת הדין">
 <pre>[img[pictures/thelawyer.jpg]]
@@ -18155,7 +18171,7 @@ __אופן ההכנה:__
 &lt;&lt;englink [[Marzipan balls]]&gt;&gt;
 </pre>
 </div>
-<div created="20170411211723019" modified="20200501141049630" tags="[[חלומות שחלמנו]] [[בדרך לאן שהוא]] [[החיים נועדו למי שלא יכול להתמודד עם סמים]]" title="עיר בנויה מרחובות">
+<div created="20170411211723019" modified="20200910135207059" tags="[[חלומות שחלמנו]] [[בדרך לאן שהוא]] [[החיים נועדו למי שלא יכול להתמודד עם סמים]] עצים" title="עיר בנויה מרחובות">
 <pre>[img[pictures/ir-bnooya.jpg]]
 
 !!![[אירי]]:
@@ -18328,11 +18344,11 @@ May the lord bless your soul, I love you girl
 
 </pre>
 </div>
-<div created="20161218191604654" modified="20200426135456304" tags="[[הנחלה בה גדלתי]] ילדים סגירים משפחות" title="עץ המשפחה של אווה">
+<div created="20161218191604654" modified="20200910135254745" tags="[[הנחלה בה גדלתי]] ילדים סגירים משפחות עצים" title="עץ המשפחה של אווה">
 <pre>[img[pictures/eva-garinit.jpg]]
 
 
-!!![[אווה]]:
+!!![[אווה|אווה כהן]]:
 
 וזה מה שסיפרתי ליויו, כפי שכתבתי ב[[כוכב המשאלות בעל תשע הצלעות]], ביום השני להגעתי אליו לדירה בפריז ל[[ארוחת כריסמס]]. זה היה יום לפני הארוחה, ב-23 בדצמבר 2015. הדברים שכתובים בהמשך הם ניסיון לתאר בקצרה את נוף ילדותי, ליויו שמידי פעם מגיב:
 
@@ -18378,6 +18394,26 @@ May the lord bless your soul, I love you girl
 
 
 &lt;&lt;englink [[Eva`s family tree]]&gt;&gt;</pre>
+</div>
+<div created="20200910125822450" modified="20200910140008053" tags="[[הכפר הגלובלי]] [[בדרך לאן שהוא]] [[קופים ממונעים]] חבר" title="עצים">
+<pre>
+[img[pictures/trees.jpg]]
+
+
+
+!!![[גורה]]:
+
+למה אדם חשוב מעץ? זאת לא אקבל. אך אם חיי אדם יהיו בסכנה, ואדרש לכרות עץ כדי להצילו, כנראה שאכרות, והמחשבה הזאת מזעזעת אותי.
+
+
+&lt;&lt;list-links filter:&quot;[tag[עצים]]&quot;&gt;&gt;
+
+
+&lt;&lt;englink [[Trees]]&gt;&gt;
+
+
+
+</pre>
 </div>
 <div created="20170603193440578" modified="20200510134420251" tags="[[אחיות חוץ]] [[אירי טוענת]] סגירים [[סיפורים מהעתיד]]" title="פ.מ.אלכסנדר">
 <pre>[img[pictures/f-m-alexander.jpg]]
@@ -18669,7 +18705,7 @@ __אופן ההכנה____
 
 &lt;&lt;englink [[Caramelized pecan pie]]&gt;&gt;</pre>
 </div>
-<div created="20170714125945456" modified="20200324164635371" tags="סדרות סרטים טלוויזיה סגירים [[האנקי דורי]]" title="פארגו">
+<div created="20170714125945456" modified="20200910135420923" tags="סדרות סרטים טלוויזיה סגירים [[האנקי דורי]] עצים" title="פארגו">
 <pre>[img[pictures/fargo.jpg]]
 
 !!![[יויו]]:
@@ -18857,10 +18893,10 @@ __אופן ההכנה____
 
 &lt;&lt;englink [[Éclair with liver stuffing]]&gt;&gt;</pre>
 </div>
-<div created="20180314180839992" modified="20200307163730637" tags="[[מתכונים טבעוניים]] [[מתכוני ארוחת הכריסמס]] [[חיות אוכל]] הצוות [[למה הדבר דומה]] מתכונים" title="פטה טבעוני">
+<div created="20180314180839992" modified="20200910094225158" tags="[[מתכונים טבעוניים]] [[מתכוני ארוחת הכריסמס]] [[חיות אוכל]] הצוות [[למה הדבר דומה]] מתכונים" title="פטה טבעוני">
 <pre>[img[pictures/vegan-pate.jpg]]
 
-
+!!![[הצוות]]:
 
 החומרים:
 
@@ -19096,7 +19132,7 @@ __אופן ההכנה____
 &lt;&lt;englink [[Once]]&gt;&gt;
 </pre>
 </div>
-<div created="20170125155935412" modified="20200406163036694" tags="[[סיפורים אמיתיים]]" title="פפינה">
+<div created="20170125155935412" modified="20200910135517736" tags="[[סיפורים אמיתיים]] עצים" title="פפינה">
 <pre>!!![[יויו]]:
 ''
 Fapina''
@@ -19181,7 +19217,7 @@ Fapina''
 
 </pre>
 </div>
-<div created="20200818120840697" modified="20200823174843111" tags="[[טיפולים מהספה]]" title="צ'ים צ'ימני">
+<div created="20200818120840697" modified="20200827200831119" tags="[[טיפולים מהספה]] [[הלכות קורונה]]" title="צ'ים צ'ימני">
 <pre>[img[pictures/chimchimney.jpg]]
 
 
@@ -19460,7 +19496,7 @@ Fapina''
 &lt;&lt;englink [[Couscous]]&gt;&gt;
 </pre>
 </div>
-<div created="20170817155826253" modified="20200501141208583" tags="סדרות טלוויזיה [[הכפר הגלובלי]] סגירים [[החיים נועדו למי שלא יכול להתמודד עם סמים]]" title="קופים ממונעים">
+<div created="20170817155826253" modified="20200910135540507" tags="סדרות טלוויזיה [[הכפר הגלובלי]] סגירים [[החיים נועדו למי שלא יכול להתמודד עם סמים]] עצים" title="קופים ממונעים">
 <pre>[img[pictures/kofim-memunaim.jpg]]
 
 !!![[יויו]]: 
@@ -19603,8 +19639,10 @@ Fapina''
 
 </pre>
 </div>
-<div created="20180324124658340" modified="20200307170154919" tags="הצוות [[חיות אוכל]] מתכונים אפייה" title="קראסט תפוחים">
+<div created="20180324124658340" modified="20200901071932882" tags="הצוות [[חיות אוכל]] מתכונים אפייה" title="קראסט תפוחים">
 <pre>[img[pictures/apple-crust.jpg]]
+
+!!![[הצוות]]:
 
 קראסט כזה אנחנו מכינים כשנשארים לנו תפוחים שאין סיכוי שכבר נאכל וזה לא שהם רקובים כי אם לכל היותר מעט מוכתמים. את כתמי הבשלות מסירים כמובן כשמקלפים. זה מאפה שמומלץ לאכול כחצי שעה אחרי שיצא (לבד) מן התנור.
 
@@ -19796,7 +19834,7 @@ Fapina''
 
 &lt;&lt;englink [[Roast beef]]&gt;&gt;</pre>
 </div>
-<div created="20170202133543180" modified="20200501141231441" tags="[[הנחלה בה גדלתי]] בתים משפחות [[החיים נועדו למי שלא יכול להתמודד עם סמים]]" title="רזיאל ורפאל">
+<div created="20170202133543180" modified="20200910135610766" tags="[[הנחלה בה גדלתי]] בתים משפחות [[החיים נועדו למי שלא יכול להתמודד עם סמים]] עצים" title="רזיאל ורפאל">
 <pre>[img[pictures/refaelveraziel.jpg]]
 
 !!![[אווה]]:
@@ -19872,7 +19910,7 @@ Fapina''
 
 &lt;&lt;englink [[Rigo Jancsi]]&gt;&gt;</pre>
 </div>
-<div created="20170124175341008" modified="20200217135049352" tags="[[הנחלה בה גדלתי]] בתים" title="ריחות">
+<div created="20170124175341008" modified="20200910135627064" tags="[[הנחלה בה גדלתי]] בתים עצים" title="ריחות">
 <pre>[img[pictures/reychot.jpg]]
 
 !!![[אווה]]:
