--- a/english.html
+++ b/english.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Trees [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Plum cake]] blue-marble-hood Trees [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200910135429849" title="$:/temp/search">
+<div created="20161023184814872" modified="20200911100523321" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -14127,7 +14127,7 @@ And [[this|https://www.youtube.com/watch?v=WZd2SkydIXA]] is a performance whose 
 
  &lt;&lt;heblink [[פינה באוש]]&gt;&gt;</pre>
 </div>
-<div created="20200910091505042" modified="20200910092926842" tags="Baking [[When they sleep]] Recipes" title="Plum cake">
+<div created="20200910091505042" modified="20200911100520010" tags="Baking [[When they sleep]] Recipes" title="Plum cake">
 <pre>[img[pictures/ugat-shezifim.jpg]]
 
 !!![[Eva|Eva Cohen]]:
@@ -14148,9 +14148,9 @@ The ingredients:
 
 *1 little spoon baking powder 
 
-* 8 plums
+*8 ripe but not too ripe plums, washed and sliced into thin slices, mixed with a little spoon of sugar
 
-*60 g grounded almonds (in stores, on the flour shelf there is an almond flour, which is actually, grounded almonds)
+*3/4 cup ground almonds (in stores, on the flour shelf there is an almond flour, which is actually, grounded almonds)
 
 The method:
 
