--- a/english.html
+++ b/english.html
@@ -413,6 +413,8 @@ Error message and password prompt
 
 <li>Christopher Moltisanti</li>
 
+<li>Cinnamon cookies</li>
+
 <li>Cleaning properly</li>
 
 <li>Closers</li>
@@ -9184,7 +9186,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Plum cake]] blue-marble-hood Trees [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Cinnamon cookies]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10626,6 +10628,14 @@ In the end of the series they made us think that [[Chris's|https://www.imdb.com/
  &lt;&lt;heblink [[כריסטופר מולטיסנטי]]&gt;&gt;
 </pre>
 </div>
+<div created="20201004124432626" modified="20201004125110752" tags="Recipes Baking [[When they sleep]] [[Corona beings]]" title="Cinnamon cookies">
+<pre>
+[img[pictures/cinnamoncookies.jpg]]
+
+
+
+ &lt;&lt;heblink [[עוגיות קינמון]]&gt;&gt;</pre>
+</div>
 <div created="20200220153427025" modified="20200401122040110" tags="[[The kitchen by Genevieve]] Kitchens" title="Cleaning properly">
 <pre>[img[pictures/menakim-heytev.jpg]]
 
@@ -11403,7 +11413,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20200807120136074" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20201004124611044" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
