--- a/index.html
+++ b/index.html
@@ -1189,6 +1189,8 @@ Error message and password prompt
 
 <li>עוגיות קימל</li>
 
+<li>עוגיות קינמון</li>
+
 <li>עוגיות שוקולד צ'יפס</li>
 
 <li>עוגת יום הולדת</li>
@@ -9274,7 +9276,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="עצים [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[עוגיות קינמון]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9294,7 +9296,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200910140003471" title="$:/temp/search">
+<div created="20161023184814872" modified="20201003153425907" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10710,7 +10712,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20200910130946436" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
+<div created="20171216194951924" modified="20201004124758783" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -17812,6 +17814,42 @@ We rise to play a greater part.
 
 &lt;&lt;englink [[Caraway cookies]]&gt;&gt;</pre>
 </div>
+<div created="20201004124356397" modified="20201004151537047" tags="מתכונים אפייה [[כשהם ישנים]] [[הלכות קורונה]]" title="עוגיות קינמון">
+<pre>
+[img[pictures/cinnamoncookies.jpg]]
+
+!!![[אווה|אווה כהן]]:
+
+אולי ברצף המחשבות השני או השלישי של אחרי התעוררות הבקר, חלפה בראשי תמונה של עוגיות הקינמון שאני נוהגת לעשות, רק שהן משובצות בפתיתי שוקולד. לא שזו כזו הברקה אבל זה יפה, והכי יפה היה לפזר אותם על הבצק המרודד, לרדד עם מינימום לחץ ולראות איך הם נכבשים לתוך הבצק. המתכון אינו כולל את הפתיתים ונתון לבחירה.
+
+החומרים:
+
+200 גרם חמאה קרה חתוכה לקוביות
+8 כפות סוכר
+2 חלמונים
+2 כפיות אבקת קינמון
+2 כוסות ו-1/2 קמח
+1/2 כפית אבקת אפיה
+ 
+
+לפיזור: 1/2 כוס סוכר עם 1/2 כוס קינמון
+
+אופן ההכנה:
+
+
+1.	לחמם תנור ל170 מעלות 
+
+2.	במעבד מזון עם להב הפלדה לאחד את כל החומרים לבצק, לעטוף בניילון נצמד  ולקרר חצי שעה-שעה
+
+3.	לרדד, לקרוץ ולהניח על תבנית מרופדת בנייר אפייה
+
+4.	לפזר מעל כל עוגייה סוכר מעורבב בקינמון ולאפות 15-20 דקות
+
+5.	כשמגיעות לטמפרטורת החדר, אורזים בכלי אטום.
+
+
+&lt;&lt;englink [[Cinnamon cookies]]&gt;&gt;</pre>
+</div>
 <div created="20180502183518120" modified="20200217130243259" tags="[[משפחת באומן]] [[חיות אוכל]] [[נאמני הגנזך]] מתכונים אפייה" title="עוגיות שוקולד צ'יפס">
 <pre>[img[pictures/chocolate-chips.jpg]]
 
@@ -18396,8 +18434,7 @@ May the lord bless your soul, I love you girl
 &lt;&lt;englink [[Eva`s family tree]]&gt;&gt;</pre>
 </div>
 <div created="20200910125822450" modified="20200910140008053" tags="[[הכפר הגלובלי]] [[בדרך לאן שהוא]] [[קופים ממונעים]] חבר" title="עצים">
-<pre>
-[img[pictures/trees.jpg]]
+<pre>[img[pictures/trees.jpg]]
 
 
 
