--- a/index.html
+++ b/index.html
@@ -17814,13 +17814,12 @@ We rise to play a greater part.
 
 &lt;&lt;englink [[Caraway cookies]]&gt;&gt;</pre>
 </div>
-<div created="20201004124356397" modified="20201004151537047" tags="מתכונים אפייה [[כשהם ישנים]] [[הלכות קורונה]]" title="עוגיות קינמון">
-<pre>
-[img[pictures/cinnamoncookies.jpg]]
+<div created="20201004124356397" modified="20201004185224810" tags="מתכונים אפייה [[כשהם ישנים]] [[הלכות קורונה]]" title="עוגיות קינמון">
+<pre>[img[pictures/cinnamoncookies.jpg]]
 
 !!![[אווה|אווה כהן]]:
 
-אולי ברצף המחשבות השני או השלישי של אחרי התעוררות הבקר, חלפה בראשי תמונה של עוגיות הקינמון שאני נוהגת לעשות, רק שהן משובצות בפתיתי שוקולד. לא שזו כזו הברקה אבל זה יפה, והכי יפה היה לפזר אותם על הבצק המרודד, לרדד עם מינימום לחץ ולראות איך הם נכבשים לתוך הבצק. המתכון אינו כולל את הפתיתים ונתון לבחירה.
+אולי ברצף המחשבות השני או השלישי של אחרי התעוררות הבקר, חלפה בראשי תמונה של עוגיות הקינמון שאני נוהגת לעשות, רק שהן משובצות בפתיתי שוקולד. לא שזו כזו הברקה אבל זה יפה, והכי יפה היה לפזר אותם על הבצק המרודד, לרדד עם מינימום לחץ ולראות איך הם נכבשים לתוך הבצק. המתכון אינו כולל את הפתיתים והם נתונים לבחירה.
 
 החומרים:
 
