--- a/english.html
+++ b/english.html
@@ -9177,7 +9177,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200910133513925" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200910134840825" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20201012122931772" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9186,7 +9186,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Cinnamon cookies]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Christmas dinner]] Sonia [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9206,7 +9206,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200911100523321" title="$:/temp/search">
+<div created="20161023184814872" modified="20201012122920021" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10592,10 +10592,36 @@ The making process:
 
  &lt;&lt;heblink [[כריסמס 2017]]&gt;&gt;</pre>
 </div>
-<div created="20200115162658453" modified="20200910131537240" tags="Meals [[Food addicts]] [[Hunky Dory]] Families Closers Trees" title="Christmas dinner">
+<div created="20200115162658453" modified="20201012122900488" tags="Meals [[Food addicts]] [[Hunky Dory]] Families Closers Trees" title="Christmas dinner">
 <pre>[img[pictures/aruchat-christmas.jpg]]
 
-coming soon as possible
+!!![[Eva|Eva Cohen]]:
+
+Spoilers wise, it's cool. Yes, this came out as a Yoyoish or Gurish sentence, but this is the way things are.
+
+In real life, I've realized pretty long ago, that spoilers won't save you, even if you go to each and every future teller there is
+
+Sometimes you can see, that the chronic is well known ahead, and this happens mostly because the writing was on the wall. 
+
+And what was after?
+
+[[A recorder in bun, but it doesn't matter|https://www.youtube.com/watch?v=IixwNBmGiPE]]
+
+.
+After a certain point in my life (more specifically- ever since I've read [[Until I Find You|https://en.wikipedia.org/wiki/Until_I_Find_You]] of [[John Irving]]), I've started to see things through the sentence:
+
+''Wisdom has reached its limit, only faith is still standing''
+
+And Christmas Eve 2015 is standing. 
+
+For now I'll say this: [[I've came|Eva Cohen]] to visit [[Yoyo]], [[Gura]] and [[Dandan]] two days before the meal. [[Iry]] showed up on the next day. [[Alfred]] came and we shopped, arranged and cleaned together. The guests arrived the meal by this order: Alfred, [[Joseph|Jozef Abaroa]], [[Daniel]] and [[Angelic]]. [[Sonia]] and [[Mark]]. [[Queng]], [[Fa]], [[Cheng]], [[Chan]] and [[Guan-yin]]. Beautiful elegant [[Genevieve]] came with her two daughters, [[Alexandra]] and [[Rushell]] [[Roger]] and [[Anna]]. Doctor [[Philip]] Lombared.
+
+I wrote in this link [[what really happened on Christmas eve|What truly happensd at Christmas dinner]].
+
+And in this here I'm writing [[the Christmas eve's recipes|Christmas dinner Recipes]].
+
+Yall.   
+
 
 
  &lt;&lt;heblink [[ארוחת כריסמס]]&gt;&gt;</pre>
@@ -10629,8 +10655,7 @@ In the end of the series they made us think that [[Chris's|https://www.imdb.com/
 </pre>
 </div>
 <div created="20201004124432626" modified="20201004125110752" tags="Recipes Baking [[When they sleep]] [[Corona beings]]" title="Cinnamon cookies">
-<pre>
-[img[pictures/cinnamoncookies.jpg]]
+<pre>[img[pictures/cinnamoncookies.jpg]]
 
 
 
@@ -10806,8 +10831,13 @@ Sometimes I ask myself, do you have a [[spirit level|https://en.wikipedia.org/wi
  &lt;&lt;heblink [[קוסקוס]]&gt;&gt;
 </pre>
 </div>
-<div created="20200308100307419" modified="20200308100445507" tags="[[Monkeys with car keys]]" title="Crest in the chest">
+<div created="20200308100307419" modified="20201012121026037" tags="[[Monkeys with car keys]]" title="Crest in the chest">
 <pre>[img[pictures/carbolet.jpg]]
+
+!!![[Yoyo]]:
+
+Once upon a time there was a moment that I noticed that once I'm happy with a thought I find brilliant for example, or something I've done - it's accompanied with a light widening of the chest, somewhat like a crest of an ego maniac rooster on the edge of spreading the wings and croaking is living in there. 
+
 
 
  &lt;&lt;heblink [[כרבולת בבית החזה]]&gt;&gt;</pre>
@@ -13203,8 +13233,15 @@ The model is taken from [[Springfield|https://en.wikipedia.org/wiki/Springfield_
 
 </pre>
 </div>
-<div created="20200219173118907" modified="20200219173216593" tags="[[Coen sister]]" title="Mark">
+<div created="20200219173118907" modified="20201012123343335" tags="[[Coen sister]]" title="Mark">
 <pre>[img[pictures/mark1.jpg]]
+
+
+!!![[Gura]]:
+
+Mark is the manliest of the men, he is the Hungarian husband of [[Soni]]a the Hungarian, and he's a computer programmer, who fulfilled his duties by making a proper exit.
+
+
 
 
  &lt;&lt;heblink [[מרק]]&gt;&gt;
@@ -13649,8 +13686,23 @@ In the years I've lived with [[Sheffy|Nano and I]] , she declared one day that [
 
 </pre>
 </div>
-<div created="20200308103647830" modified="20200308103816040" tags="[[Coen sister]] [[True stories]] Metafiction" title="Neta">
+<div created="20200308103647830" modified="20201012120659776" tags="[[Coen sister]] [[True stories]] Metafiction" title="Neta">
 <pre>[img[pictures/neta.jpg]]
+
+
+!!![[Yoyo]]:
+
+I haven't mentioned Neta yet, my good friend from elementary school. Our parents were friends and we studied at the same class. At the phase when boys and girls don't really talk we spoke less but we were friends. We loved to take a hike together in the fields.
+
+Neta is tall and pretty with greenish grey eyes and she doesn't talk a lot. Today it's called [[Asperger|Social skills]]. I was in love with her for a while in high school, but those falls are never quite clear to me.
+
+After the army she went to New Zealand, lived there for couple of years, got married, had a son, and when he was four he passed away. She got divorced and traveled the world. 
+ 
+Two weeks ago I got an email from her, where she wrote that she talked to my dad and that she will be in Paris - and if I wanna meet up.
+
+I sure do!!!
+
+She's at our place now and she's charming and she told us about [[Lily]]. 
 
 
 
@@ -14071,13 +14123,13 @@ I’ve tried to paint Pedro Almodóva from [[this photo|https://www.indiewire.co
 
 </pre>
 </div>
-<div created="20200212172521280" modified="20200422205113387" tags="[[Coen sister]]" title="Philip">
+<div created="20200212172521280" modified="20201012122617389" tags="[[Coen sister]]" title="Philip">
 <pre>[img[pictures/phillip.jpg]]
 
 
 !!![[Gura]]:
 
-Our Phillip.
+Our Philip.
 
 I mainly tried to show the doctor's magnificent fro, which grows out of his tall heart-shaped forehead, and his great face, and his wise profound gaze.
 
@@ -16244,10 +16296,13 @@ All of us are Noah's descendants who spread among earth to this very day. many d
 
  &lt;&lt;heblink [[מגדל בבל]]&gt;&gt;</pre>
 </div>
-<div created="20200910125946187" modified="20200910134912527" tags="[[The global village]] [[Monkeys with car keys]] [[On the road to somewhere]] [[A friend]]" title="Trees">
+<div created="20200910125946187" modified="20201012114843451" tags="[[The global village]] [[Monkeys with car keys]] [[On the road to somewhere]] [[A friend]]" title="Trees">
 <pre>[img[pictures/trees.jpg]]
 
 
+!!![[Gura]]:
+
+Why is man more important than a tree? I won't accept it. If a human's life is in danger, and I'll have to cut a tree in order to save it, I probably would, and this thought terrifies me
 
 
 
@@ -16437,8 +16492,12 @@ The farm's animals are delighted with surprise.
 
 &lt;&lt;heblink [[לזניה צמחונית]]&gt;&gt;</pre>
 </div>
-<div created="20200609191759620" modified="20200609191935644" tags="[[Here in the Ghetto]] [[On the road to somewhere]] Metafiction Houses [[Corona beings]]" title="Villa Maroc">
+<div created="20200609191759620" modified="20201012115522617" tags="[[Here in the Ghetto]] [[On the road to somewhere]] Metafiction Houses [[Corona beings]]" title="Villa Maroc">
 <pre>[img[pictures/villa-maroc.jpg]]
+
+!!![[Tomer]]:
+
+[[Villa Maroc|http://www.villamaroc.net/]] is on our one hundred meters radius, and passing by the beautiful display window is part of our daily routine, and it could be quiet dangerous if [[Nano|Nano and I]] is with me. She's attracted to anything that's colorful or shiny or silvery or golden even if it's delicate. Dganit and Yael welcome us warmly, we pat all the rugs and the pretty fabrics, sit for a little bit on the sofas, pay a visit to the jewelry and want to buy plenty but we usually control ourselves, and yet [[our house overflows|Corona beings]] with Villa Maroc. 
 
 
 
@@ -16537,7 +16596,7 @@ I go out of a lesson at [[Dalia's|Dalya`s room]], go up towards Heichal Hatarbut
 
 </pre>
 </div>
-<div created="20200324191252112" modified="20200426142110726" tags="Meals [[Hunky Dory]] Families" title="What truly happensd at Christmas dinner">
+<div created="20200324191252112" modified="20201012122915461" tags="Meals [[Hunky Dory]] Families [[True stories]]" title="What truly happensd at Christmas dinner">
 <pre>[img[pictures/kie87qScl5HLeyVw.JPG]]
 
 
