--- a/index.html
+++ b/index.html
@@ -643,6 +643,8 @@ Error message and password prompt
 
 <li>המטבח של הנחלה</li>
 
+<li>המטבח של טל</li>
+
 <li>המסאז'יסטית</li>
 
 <li>המעבדה</li>
@@ -9264,10 +9266,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20200910133533342" title="$:/state/tab/moresidebar-401116514">
-<pre>$:/core/ui/MoreSideBar/All</pre>
+<div created="20161023184709475" modified="20201101150419877" title="$:/state/tab/moresidebar-401116514">
+<pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200910135945726" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20201101163931238" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9276,7 +9278,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="TREME [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[המטבח של טל]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9296,7 +9298,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20201009211803560" title="$:/temp/search">
+<div created="20161023184814872" modified="20201101152530328" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10712,7 +10714,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20201004124758783" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
+<div created="20171216194951924" modified="20201101131823237" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -13016,6 +13018,15 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 
 </pre>
+</div>
+<div created="20201101130951565" modified="20201101164158272" tags="מטבחים בתים [[אחיות חוץ]] אימהות [[אחות כהן]] [[מטא בדיון]]" title="המטבח של טל">
+<pre>[img[pictures/talskitchen.jpg]]
+
+!!![[אימא של ג'אז]]:
+
+ביקשתי מטל, חברתי היפה, שתשלח לי כמה צילומי רוחב מהמטבח היפה שלה, כך [[שגורה|גורה]] תבחר ותצייר. אינני מאוכזבת מבחירתה של גורה, אבל זו רק זווית אחת מתוך מטבח מלא פינות חמד ושכיות חמדה, שהוא מובלעת בתוך בית נפלא שנמצא בתוך חצר גן עדן בכפר בו נולדנו, ושם צילמתי חלק מהקליפ שעשיתי עם [[ג'אזז|Jazz]] [[וגאנג|https://www.youtube.com/watch?v=aKlvDbL4YjU&amp;list=RDaKlvDbL4YjU&amp;start_radio=1&amp;t=0]]   הילדים המופלאים, קצת אחרי שעזבנו. 
+
+&lt;&lt;englink [[Tal's Kitchen]]&gt;&gt;</pre>
 </div>
 <div created="20170318201423053" modified="20200628163724243" tags="HH" title="המסאז'יסטית">
 <pre>[img[pictures/themasseur.jpg]]
