--- a/english.html
+++ b/english.html
@@ -1047,6 +1047,8 @@ Error message and password prompt
 
 <li>Tal Bagels</li>
 
+<li>Tal's Kitchen</li>
+
 <li>Tarte tatin</li>
 
 <li>Technical director</li>
@@ -9186,7 +9188,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Christmas dinner]] Sonia [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11443,7 +11445,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20201004124611044" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20201101131704951" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -15162,6 +15164,15 @@ Type [[Tal Bagels|http://www.tal-bagels.co.il/index.php]] in the navigator, and 
 
  &lt;&lt;heblink [[טל בייגלס]]&gt;&gt;
 </pre>
+</div>
+<div created="20201101131058927" modified="20201101150306794" tags="Kitchens Houses [[Outer sisters]] Mothers [[Coen sister]] Metafiction" title="Tal's Kitchen">
+<pre>[img[pictures/talskitchen.jpg]]
+
+
+
+
+
+ &lt;&lt;heblink [[המטבח של טל]]&gt;&gt;</pre>
 </div>
 <div created="20200306141912158" modified="20200306142040911" tags="Recipes Baking [[When they sleep]]" title="Tarte tatin">
 <pre>[img[pictures/tarte-tatin.jpg]]
